Point Biserial, SVR and comments

--- a/Boston_House_Dataset.ipynb
+++ b/Boston_House_Dataset.ipynb
@@ -62,13 +62,13 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn import preprocessing\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVR\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import scipy\n",
-    "from scipy.stats import mstats\n",
-    "from scipy.stats import kruskal\n",
+    "from scipy.stats import mstats, kruskal\n",
     "import statsmodels.api as sm\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense"
@@ -160,7 +160,6 @@
    "outputs": [],
    "source": [
     "#Summary and description of the dataset to get a detailed statistical information for each column\n",
-    "\n",
     "df_bsn.describe()"
    ]
   },
@@ -170,6 +169,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Checking the distributin of the target (price) variable\n",
+    "sns.distplot(df_bsn['target'], bins=30)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The values of target seem to be distributed normally with few outliers and slight skewed to right."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Checking for outliers\n",
+    "\n",
+    "sns.boxplot(x=\"CHAS\", y=\"target\", data=df_bsn)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variable target (price) is skewed to the right. Furthermore, it looks like that there are some unusually high median-values in the data, especially in the areas that do not bounds the River. To confirm it there is a QQ Plot of those variables below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plotting QQPlot to assess if the target (price) variable came from some theoretical distribution such as a Normal or exponential\n",
+    "pr = sm.qqplot(df_bsn[\"target\"], line='s')\n",
+    "\n",
+    "dt = pr.findobj(lambda x: hasattr(x, 'get_color') and x.get_color() == 'b')\n",
+    "\n",
+    "[d.set_alpha(0.3) for d in dt]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The QQ-Plot shows that upper-third seems to come from a different distribution than the lower two-thirds.  Therefore, the median-values of price aren’t normally distributed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting a pairplot to  visualize the relationship between variables\n",
     "sns.pairplot(df_bsn, hue=\"CHAS\", markers=[\"o\", \"s\"])"
    ]
   },
@@ -198,37 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Checking for outliers\n",
-    "\n",
-    "sns.boxplot(x=\"CHAS\", y=\"target\", data=df_bsn)\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The variable target (price) is skewed to the right. Furthermore, it looks like that there are some unusually high median-values in the data, especially in the areas that do not bounds the River. To confirm it there is a QQ Plot of those variables below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pr = sm.qqplot(df_bsn[\"target\"])\n",
-    "\n",
-    "dt = pr.findobj(lambda x: hasattr(x, 'get_color') and x.get_color() == 'b')\n",
-    "\n",
-    "[d.set_alpha(0.3) for d in dt]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The QQ-Plot shows that upper-third seems to come from a different distribution than the lower two-thirds.  Therefore, the median-values of price aren’t normally distributed."
+    "#Point biserial between the boolean variable CHAS and the continuous variable target (price) to measure the relationship\n",
+    "scipy.stats.pointbiserialr (df_bsn['CHAS'], df_bsn['target'])"
    ]
   },
   {
@@ -239,7 +268,7 @@
    },
    "outputs": [],
    "source": [
-    "#Split the input and the output variables\n",
+    "#Splitting the input and the output variables\n",
     "\n",
     "prices = df_bsn['target']\n",
     "features = df_bsn.drop('target', axis = 1)"
@@ -374,9 +403,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Dropping the variable CHAS from the samples\n",
+    "river = river.drop('CHAS', axis = 1)\n",
+    "noriver = noriver.drop('CHAS', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Describing the samples river and noriver writing rows as columns and vice-versa\n",
     "river.describe().T"
    ]
   },
@@ -466,7 +509,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Split the dataset into input features (i) and the feature we wish to predict - price (p)\n",
@@ -514,9 +559,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svr = SVR(kernel='rbf',  C=100.0, epsilon=0.2, gamma=0.001)\n",
+    "log = LinearRegression()\n",
+    "\n",
+    "# train both models\n",
+    "svr.fit(i_train, p_train)\n",
+    "log.fit(i_train, p_train)\n",
+    "\n",
+    "# predict test labels from both models\n",
+    "predLog = log.predict(i_test)\n",
+    "predSvr = svr.predict(i_test)\n",
+    "\n",
+    "# show it on the plot\n",
+    "plt.plot(p_test, p_test, label='True data')\n",
+    "plt.plot(p_test, predSvr, 'co', label='SVR')\n",
+    "plt.plot(p_test, predLog, 'mo', label='LogReg')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Setting up the architecture - first and second layer as a dense (fully-connected) layers with 64 neurons, ReLU activation and the input shape is 13 and the last layer layer is a dense layer with 1 neuron\n",
