--- a/Boston_House_Dataset.ipynb
+++ b/Boston_House_Dataset.ipynb
@@ -68,6 +68,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "import scipy\n",
+    "from scipy import stats\n",
     "from scipy.stats import mstats, kruskal\n",
     "import statsmodels.api as sm\n",
     "from keras.models import Sequential\n",
@@ -77,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Load the Boston Housing dataset from sklearn.datasets\n",
@@ -109,9 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Conversion to numpy array - target is the variable MEDV (input is the price and the outputs are the 'feature names')\n",
@@ -263,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Splitting the input and the output variables\n",
@@ -368,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Setting the variable CHAS as an integer\n",
@@ -390,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Splitting the dataset in 2 groups related to CHAS variable\n",
@@ -403,9 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Dropping the variable CHAS from the samples\n",
@@ -498,6 +487,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.ttest_ind(river['target'], noriver['target'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a difference between the average price from areas that bound the river and those that don't bound the river. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(10,6))\n",
+    "sns.distplot(river['target'])\n",
+    "sns.distplot(noriver['target'])\n",
+    "fig.legend(labels=['river','noriver'])\n",
+    "plt.show()               "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
@@ -509,9 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Split the dataset into input features (i) and the feature we wish to predict - price (p)\n",
@@ -523,9 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Make sure that the scale of the input features are similar as some of the dataset features have different scale and it makes difficult to for the initialization of the neural network\n",
@@ -597,9 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Estimate of the model’s performance\n",
@@ -614,9 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Training on the data\n",
@@ -627,9 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Find the accuracy of the test set - the aim is to get the test accuracy anywhere between 80% to 95%\n",
@@ -654,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
